Add link to 'edit and run' at the end of each workbook.

--- a/ACT_Conveyance_Duty.ipynb
+++ b/ACT_Conveyance_Duty.ipynb
@@ -306,6 +306,26 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Next step\n",
+    "You can edit and re-run this example workbook by following the instructions here:\n",
+    "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
