--- a/Australian_GST.ipynb
+++ b/Australian_GST.ipynb
@@ -211,8 +211,21 @@
     "themselves \"DRY”  when driving computations in different directions.\n",
     "This is in sharp contrast to procedural and functional programming,\n",
     "whereby the GST computation needs to be restated multiple times,\n",
-    "depending on what value is known and which ones are unknown.\n"
+    "depending on what value is known and which ones are unknown.\n",
+    "\n",
+    "## Next step\n",
+    "You can edit and re-run this example workbook by following the instructions here:\n",
+    "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
