--- a/ACT_Conveyance_Duty.ipynb
+++ b/ACT_Conveyance_Duty.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:05.800763Z",
+     "iopub.status.busy": "2022-12-31T21:13:05.800763Z",
+     "iopub.status.idle": "2022-12-31T21:13:05.917655Z",
+     "shell.execute_reply": "2022-12-31T21:13:05.917655Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%reload_ext jetisu.query_idr_magic"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Australian Capital Territory (ACT) Conveyance Duty\n",
     "\n",
@@ -49,37 +58,43 @@
     "\n",
     "and the full definition in MiniZinc is shown at the end of this\n",
     "appendix.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Querying the Conveyancing Rules\n",
     "\n",
     "Here is a selection of queries that demonstrate the number of different\n",
     "insights the intensionally defined relation can provide."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### How much duty for a home occupier on a house of $1.2M?\n",
     "\n",
     "This query gives the answer of $47,590.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:05.917655Z",
+     "iopub.status.busy": "2022-12-31T21:13:05.917655Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.131606Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.131606Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -93,25 +108,31 @@
    "source": [
     "%%jetisu_query\n",
     "select price, duty from ACT_Conveyance_Duty where price = 1200000 and eligible_owner_occupier;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### How much duty for a non\\_commercial property valued at of $1.2M?\n",
     "\n",
     "This query shows that there are two classes of non-commercial property transactions, and the duty payable for each case.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.206927Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.205936Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.433139Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.432131Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -127,27 +148,33 @@
     "select eligible_owner_occupier, duty\n",
     "    from ACT_Conveyance_Duty\n",
     "    where price = 1200000 and non_commercial;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### How much duty is chargeable for a property valued at $1.2M?\n",
     "\n",
     "This query shows the comparative conveyancing duty across the various pricing\n",
     "regimes. Notice that the IDR has deduced and is reporting that there are\n",
     "*three* categories of payers."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.438143Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.438143Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.659799Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.658792Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -162,26 +189,32 @@
     "%%jetisu_query\n",
     "\n",
     "select * from ACT_Conveyance_Duty where price = 1200000;\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### How much duty is chargeable for a property valued at $2M?\n",
     "\n",
     "This query shows the convergence of the owner occupied and non-occupied regimes at\n",
     "higher prices."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.663799Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.662804Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.933868Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.932861Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -196,27 +229,33 @@
     "%%jetisu_query\n",
     "\n",
     "select * from ACT_Conveyance_Duty where price = 2000000;\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### An owner occupier pays $50,150 in conveyancing duty. What is the corresponding house price?\n",
     "\n",
     "This query shows that there is more than one possible price that gives a duty value\n",
     "of $50,150. The IDR has deduced that there are 100 such values and\n",
     "reports them."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.937866Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.936869Z",
+     "iopub.status.idle": "2022-12-31T21:13:07.641928Z",
+     "shell.execute_reply": "2022-12-31T21:13:07.641928Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -231,25 +270,31 @@
     "%%jetisu_query\n",
     "\n",
     "select price from ACT_Conveyance_Duty where duty = 50150 and eligible_owner_occupier;\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### A property owner pays $140,740 in conveyancing duty. What are the corresponding property prices?\n",
     "\n",
     "This query shows the price ranges across the three regimes."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:07.645934Z",
+     "iopub.status.busy": "2022-12-31T21:13:07.644934Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.947110Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.947110Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -271,24 +316,30 @@
     "where duty = 140740\n",
     "group by non_commercial,\n",
     "    eligible_owner_occupier;\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Definition\n",
     "Here is the definition of the ```ACT_Conveyance_Duty``` intensionally defined relation."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.951118Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.950118Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.958892Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.957882Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -302,30 +353,18 @@
    "source": [
     "%%jetisu_show\n",
     "ACT_Conveyance_Duty"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Next step\n",
     "You can edit and re-run this example workbook by following the instructions here:\n",
     "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -337,14 +376,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
