--- a/Birthday Money.ipynb
+++ b/Birthday Money.ipynb
@@ -3,16 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:05.780008Z",
+     "iopub.status.busy": "2022-12-31T21:13:05.780008Z",
+     "iopub.status.idle": "2022-12-31T21:13:05.902759Z",
+     "shell.execute_reply": "2022-12-31T21:13:05.902759Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%reload_ext jetisu.query_idr_magic"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Birthday Money\n",
     "\n",
@@ -31,14 +40,20 @@
     "\n",
     "Initially the policy for birthday money was calculated as $10.00 per year. Here is an intensionally defined relation (IDR)\n",
     "```standard_birthday_money``` that captures this."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:05.907776Z",
+     "iopub.status.busy": "2022-12-31T21:13:05.902759Z",
+     "iopub.status.idle": "2022-12-31T21:13:05.917655Z",
+     "shell.execute_reply": "2022-12-31T21:13:05.917099Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -52,27 +67,33 @@
    "source": [
     "%%jetisu_show\n",
     "standard_birthday_money"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "The language used to define IDRs is not so important, the crucial aspect is that the reader, and the computing system, understand the intension.  The\n",
     "definition above happens to have been written in [MiniZinc](https://www.minizinc.org/).\n",
     "\n",
     "IDRs can be queried as if they are an ordinary database table that contains _all_ the answers. With this table defined, the\n",
     "following query gives the expected answer:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:05.964904Z",
+     "iopub.status.busy": "2022-12-31T21:13:05.964904Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.180047Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.178036Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -86,23 +107,29 @@
    "source": [
     "%%jetisu_query\n",
     "select * from standard_birthday_money where age = 10;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "And Query 2 also gives the same answer!"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "And Query 2 also gives the same answer!"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.185751Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.184749Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.409012Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.408005Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -116,26 +143,32 @@
    "source": [
     "%%jetisu_query\n",
     "select * from standard_birthday_money where birthday_money=100;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "Notice that the relationship can be queried from multiple directions.\n",
     "## Made conditional on behaviour\n",
     "\n",
     "At some point of time, the amount of birthday money was made contingent on the child's behaviour. Here is the second version.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.413025Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.412018Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.419969Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.418964Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -149,23 +182,29 @@
    "source": [
     "%%jetisu_show\n",
     "new_birthday_money"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "If we now repeat ```Query 1``` we get a different output."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "If we now repeat ```Query 1``` we get a different output."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.422969Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.422969Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.605963Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.605963Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -179,25 +218,31 @@
    "source": [
     "%%jetisu_query\n",
     "select * from new_birthday_money where age = 10 ;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "This may be read as \"a child turning ten will receive either nothing, or two hundred dollars birthday money\"\n",
     "\n",
     "As soon as we know the behaviour of the person, we can find the actual birthday money with the following query:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.610986Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.610986Z",
+     "iopub.status.idle": "2022-12-31T21:13:06.844966Z",
+     "shell.execute_reply": "2022-12-31T21:13:06.844966Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -211,23 +256,29 @@
    "source": [
     "%%jetisu_query\n",
     "select * from new_birthday_money where age = 10 and good_behaviour;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "And again to show that the direction of querying is flexible:"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "And again to show that the direction of querying is flexible:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:06.850476Z",
+     "iopub.status.busy": "2022-12-31T21:13:06.849479Z",
+     "iopub.status.idle": "2022-12-31T21:13:07.045315Z",
+     "shell.execute_reply": "2022-12-31T21:13:07.045315Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -243,24 +294,30 @@
     "select good_behaviour from new_birthday_money\n",
     "    where age = 10\n",
     "        and birthday_money = 200;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Test Data\n",
     "The intensionally define relation lends itself to automated generation of test cases.  Here is an example of a test case that can be validated then copied and used with [pytest](https://docs.pytest.org/). The name of the function is generated by hashing the input query."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:07.048324Z",
+     "iopub.status.busy": "2022-12-31T21:13:07.048324Z",
+     "iopub.status.idle": "2022-12-31T21:13:07.195718Z",
+     "shell.execute_reply": "2022-12-31T21:13:07.195718Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -280,30 +337,18 @@
     "select good_behaviour from new_birthday_money\n",
     "    where age = 10\n",
     "        and birthday_money = 200;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Next step\n",
     "You can edit and re-run this example workbook by following the instructions here:\n",
     "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -315,14 +360,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
