--- a/Range.ipynb
+++ b/Range.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.279315Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.278309Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.383313Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.383313Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%reload_ext jetisu.query_idr_magic"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Range\n",
     "\n",
@@ -33,14 +42,20 @@
     "    extensionally defined relations.\n",
     "\n",
     "Here is the definition MiniZinc:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.387318Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.387318Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.395809Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.395809Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -54,25 +69,31 @@
    "source": [
     "%%jetisu_show\n",
     "range"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "The first example query illustrates how an intensionally defined\n",
     "relation may return multiple rows when queried, giving a result which starts at 10, finishes at 20 and has 5 values in\n",
     "the sequence:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.399817Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.398817Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.572184Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.572184Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -86,13 +107,13 @@
    "source": [
     "%%jetisu_query\n",
     "select * from range where N=5 and From_Start=10 and To_Stop = 20;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "The second example query shows how the contents of `WHERE` clauses may\n",
     "be folded into intentional definition of the relation.\n",
@@ -123,14 +144,20 @@
     "Here is an intensional definition of a relation where the query\n",
     "constraints in the `WHERE` clause are pushed down into the MiniZinc\n",
     "definition."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.577968Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.576958Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.585488Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.585488Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -144,28 +171,34 @@
    "source": [
     "%%jetisu_show\n",
     "range2"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "and here is the result of querying this relation"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "and here is the result of querying this relation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.589502Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.588496Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.756338Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.756338Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "|nth_value|from_start|to_stop|n|nth|\n|----|----|----|----|----|\n|10|10.0|20.0|5|0|\n|12.5|10.0|20.0|5|1|"
+      "text/markdown": "|from_start|to_stop|n|nth|nth_value|\n|----|----|----|----|----|\n|10.0|20.0|5|0|10|\n|10.0|20.0|5|1|12.5|"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -174,26 +207,32 @@
    "source": [
     "%%jetisu_query\n",
     "select * from range2;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "The third example query illustrates how the `range` relation may be\n",
     "queried from multiple directions, as is usually expected for relations. The following query gives a relation which finds the FromStart and Nth values which belong\n",
     "to sequences with nthValue of 15.0 which finish at 20 and have 5 values\n",
     "in each sequence. There are four tuples in the result:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2022-12-31T21:13:09.759872Z",
+     "iopub.status.busy": "2022-12-31T21:13:09.759872Z",
+     "iopub.status.idle": "2022-12-31T21:13:09.957882Z",
+     "shell.execute_reply": "2022-12-31T21:13:09.956862Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -207,30 +246,18 @@
    "source": [
     "%%jetisu_query\n",
     "select * from range where N=5 and To_Stop = 20 and nth_Value=15.0;"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Next step\n",
     "You can edit and re-run this example workbook by following the instructions here:\n",
     "[How to run the example notebooks](https://github.com/DavidPratten/jetisu/blob/main/docs/run_notebooks.md)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -242,14 +269,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
