--- a/Birthday Money.ipynb
+++ b/Birthday Money.ipynb
@@ -328,7 +328,7 @@
       "    where age = 10\n",
       "        and birthday_money = 200;\n",
       "\"\"\", 'data')\n",
-      "    assert sorted_res(res) == sorted_res((('good_behaviour',), [(True,)]))\n"
+      "    assert idr_test_res_sort(res) == idr_test_res_sort((('good_behaviour',), [(True,)]))\n"
      ]
     }
    ],
