Update 2 for alignment with conference paper.

--- a/ACT_Conveyance_Duty.ipynb
+++ b/ACT_Conveyance_Duty.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Australian Capital Territory (ACT) Conveyance Duty\n",
     "\n",
-    "The following is an intensionally defined relation that captures the\n",
+    "The following is an sigma complete relation that captures the\n",
     "relationship between price and [conveyance duty in the ACT from 1 July\n",
     "2022](https://www.revenue.act.gov.au/duties/conveyance-duty). The duty\n",
     "payable depends firstly on whether the purchase is non-commercial or\n",
@@ -37,15 +37,15 @@
     "\n",
     "  - the effort in capturing this calculation is of the same order as\n",
     "    using a procedural or functional language, however the\n",
-    "    `ACT_Conveyance_Duty` intensionally defined relation has a bigger\n",
+    "    `ACT_Conveyance_Duty` sigma complete relation has a bigger\n",
     "    \"pay-off\". It is queryable in any direction, just like an ordinary\n",
     "    database table\n",
     "\n",
-    "  - the usage of an intensionally defined relation `units` in the\n",
+    "  - the usage of an sigma complete relation `units` in the\n",
     "    definition of `ACT_Conveyance_Duty`. This is a reusable relation\n",
     "    that captures the idea of converting a value to a number of units, whether full or partial.\n",
     "\n",
-    "The the `ACT_Conveyance_Duty` intensionally defined relation has the\n",
+    "The the `ACT_Conveyance_Duty` sigma complete relation has the\n",
     "following attributes\n",
     "\n",
     "```\n",
@@ -325,7 +325,7 @@
    },
    "source": [
     "### Definition\n",
-    "Here is the definition of the ```ACT_Conveyance_Duty``` intensionally defined relation."
+    "Here is the definition of the ```ACT_Conveyance_Duty``` sigma complete relation."
    ]
   },
   {
