--- a/Australian_GST.ipynb
+++ b/Australian_GST.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Australian Goods and Services Tax (GST) Example\n",
     "\n",
-    "The following is an example intensionally defined relation that captures\n",
+    "The following is an example sigma complete relation that captures\n",
     "the relationship between consumer Price, the Goods and Services Tax\n",
     "(GSTAmount), and the price before application of the GST (ExGSTAmount).\n",
     "The definition is written in MiniZinc."
@@ -94,7 +94,7 @@
     "constraint Price = GSTAmount*11;\n",
     "```\n",
     "\n",
-    "The following is the behaviour of this intensionally defined relation\n",
+    "The following is the behaviour of this sigma complete relation\n",
     "under various queries. The `Australian_GST` relation returns an empty\n",
     "extension when insufficiently constrained to lead to a finite extension.\n",
     "\n",
@@ -106,7 +106,7 @@
     "Query result is an empty relation.\n",
     "\n",
     "The same empty result is obtained when the relation is constrained in a\n",
-    "manner that violates the intension. For example:\n"
+    "manner that violates the predicate. For example:\n"
    ],
    "metadata": {
     "collapsed": false
