--- a/Range.ipynb
+++ b/Range.ipynb
@@ -30,7 +30,7 @@
     "`ToStop`.\n",
     "\n",
     "The `range` relation is used to illustrate three aspects of\n",
-    "intensionally defined relations:\n",
+    "sigma complete relations:\n",
     "\n",
     "1.  Multi-row result sets\n",
     "\n",
@@ -39,7 +39,7 @@
     "    `WHERE` clause\n",
     "\n",
     "3.  Querying a relation from multiple directions as we normally do for\n",
-    "    extensionally defined relations.\n",
+    "    data relations.\n",
     "\n",
     "Here is the definition MiniZinc:"
    ]
@@ -77,7 +77,7 @@
     "collapsed": false
    },
    "source": [
-    "The first example query illustrates how an intensionally defined\n",
+    "The first example query illustrates how an sigma complete\n",
     "relation may return multiple rows when queried, giving a result which starts at 10, finishes at 20 and has 5 values in\n",
     "the sequence:"
    ]
@@ -116,7 +116,7 @@
    },
    "source": [
     "The second example query shows how the contents of `WHERE` clauses may\n",
-    "be folded into intentional definition of the relation.\n",
+    "be folded into the predicate of the relation.\n",
     "\n",
     "```\n",
     "\n",
@@ -138,8 +138,7 @@
     "  - Compute the result of the first example query and filter out rows\n",
     "    which do not have `nthValue < 13`\n",
     "\n",
-    "  - Push the \"`nthValue < 13`\" constraint down into an intensionally\n",
-    "    defined relation `range1` and query it instead of `range`.\n",
+    "  - Push the \"`nthValue < 13`\" constraint down into an sigma complete relation `range1` and query it instead of `range`.\n",
     "\n",
     "Here is an intensional definition of a relation where the query\n",
     "constraints in the `WHERE` clause are pushed down into the MiniZinc\n",
