Update 3 for alignment with conference paper.

--- a/ACT_Conveyance_Duty.ipynb
+++ b/ACT_Conveyance_Duty.ipynb
@@ -159,7 +159,7 @@
     "### How much duty is chargeable for a property valued at $1.2M?\n",
     "\n",
     "This query shows the comparative conveyancing duty across the various pricing\n",
-    "regimes. Notice that the IDR has deduced and is reporting that there are\n",
+    "regimes. Notice that the sigma complete relation has deduced and is reporting that there are\n",
     "*three* categories of payers."
    ]
   },
@@ -240,7 +240,7 @@
     "### An owner occupier pays $50,150 in conveyancing duty. What is the corresponding house price?\n",
     "\n",
     "This query shows that there is more than one possible price that gives a duty value\n",
-    "of $50,150. The IDR has deduced that there are 100 such values and\n",
+    "of $50,150. The sigma complete relation has deduced that there are 100 such values and\n",
     "reports them."
    ]
   },
